src/notifications.scss
/* NOTIFICATIONS */
.notification-bar,
#top-popup {
  @include flex-layout();
  position: absolute !important;
  left: unset !important;
  right: 5px !important;
  background: $black !important;
  border: 1px solid $blue !important;
  width: 350px !important;
  height: 200px !important;
  border-radius: 5px !important;
  z-index: 120 !important;
  transition: top 1s !important;

  .content {
    text-align: center !important;
  }

  .right {
    @include flex-layout();
    float: unset !important;
    gap: 10px !important;
    padding: 0 !important;

    // Join invite button
    // Do not disturb button
    button,
    // Enter game button
    input[type="button"],
    // Close notification button
    a {
      position: relative !important;
      width: 250px !important;
      height: 35px !important;
      border: none !important;
      border-radius: 5px !important;
      outline: none !important;
      margin: 0 !important;
      padding: 0 !important;
      transition: background 0.15s ease-in-out !important;
    }

    // Join invite button
    // Do not disturb button
    button {
      font: 700 1.2em "Montserrat", sans-serif !important;
    }

    // Join invite button
    input[type="button"] {
      font-size: 0 !important;
    }

    // Join invite button
    // Do not disturb button
    button {
      background: $gray !important;
      color: $black !important;

      &:hover {
        background: $blue !important;
      }
    }

    // Enter game button
    input[type="button"] {
      background: $green icon("stadiaController", $black) no-repeat center /
        20px !important;

      &:hover {
        background: darken($green, 10%) icon("stadiaController", $black)
          no-repeat center / 20px !important;
      }
    }

    // Close notification button
    a {
      background: $red icon("close", $black) no-repeat center / 20px !important;

      &:hover {
        background: darken($red, 10%) icon("close", $black) no-repeat center /
          20px !important;
      }

      img {
        display: none !important;
      }
    }
  }
}

.notification-bar {
  top: -200px !important;

  &.ng-scope:not(.ng-hide) {
    top: 50px !important;

    @media (max-width: 1000px) {
      top: 135px !important;
    }
  }
}

#top-popup {
  top: -200px !important;

  &[style*="top: "]:not([style*="top: -"]) {
    top: 50px !important;

    @media (max-width: 1000px) {
      top: 135px !important;
    }
  }
}

